--- a/css/structure.css
+++ b/css/structure.css
@@ -6,12 +6,19 @@
 	font-family: sans-serif;
 	font-size:16px;
 }
+body {
+      min-width: 1040px;
+}
 a {
 	text-decoration: none;
 	color:inherit;
 }
 a:hover {
 	text-decoration: underline;
+}
+
+img {
+    border: none;
 }
 /* --------------------- HEADER --------------------- */
 
@@ -20,7 +27,7 @@ a:hover {
 	background-color:#F0F0F0;
 	width:100%;
 	height:40px;
-	margin:20px 0 80px 0;
+	margin:20px 0 30px 0;
 	border-top:solid 2px #EEEEEE;
 	border-bottom:solid 2px #EEEEEE;
 }
@@ -86,7 +93,7 @@ float: left;
 
 #corps {
 
-margin:0 0 75px 6%;
+margin:0 0 15px 6%;
 width:73%;
 min-width:689px;
 max-width:1100px;
