--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,81 @@
+/********************************* Style Générale ************************************/
+
+p {
+	clear:both;
+}
+label {
+	font-weight: bold;
+}
 
 
+
+ul, ol {
+	text-align:left;
+	list-style-type:square;
+}
+option {
+	text-indent:10px;
+	text-align:left;
+}
+
+select{
+background: transparent;
+ width: 154px;
+ padding: 3px 5px;
+ font-size:13px;
+border: 1px solid #C1E0F7;
+ border-radius: 0;
+-webkit-appearance: none;
+ -moz-appearance: none;
+ appearance: none;
+ text-align:center;
+
+}
+
+select:hover {
+	cursor:  pointer;
+}
+.select{
+	-moz-border-radius: 3px;
+-webkit-border-radius: 3px;
+border-radius: 3px;
+ width: 154px;
+ height: 26px;
+ overflow: hidden;
+ background: url(../images/bottom-arrow.png) no-repeat 96% center #f4f4f4;
+ border: 1px solid #56A8E7;
+-moz-box-shadow: 1px 1px 3px #666;
+-webkit-box-shadow: 1px 1px 3px #666;
+box-shadow: 0px 1px 1px #C7C7C7;
+}
+
+
+
+.ContenerError {
+-moz-border-radius: 5px;
+-webkit-border-radius: 5px;
+border-radius: 5px;
+-moz-box-shadow: 1px 1px 3px #666;
+-webkit-box-shadow: 1px 1px 3px #666;
+box-shadow: 1px 1px 1px #666;
+background-color:#FFCCCC;
+list-style-position: inside;
+padding:10px 20px;
+border:#FF9191 solid 1px;
+margin-bottom:10px;
+}
+
+.text-align-left {
+	text-align:left;
+}
+
+.floatLeft {
+	float:left;
+}
+
+/********************************* Fin Style Générale ************************************/
+
+/********* Pour les Formulaire ***************/
 
 input {
 border: 1px solid #CCC;
@@ -10,6 +86,7 @@ outline: 0;
 -webkit-appearance: none;
 max-width:120px;
 }
+
 .INPUT_text {
 -moz-border-radius: 5px;
 -webkit-border-radius: 5px;
@@ -21,18 +98,28 @@ box-shadow: 1px 1px 1px #666;
 
 .INPUT_submit {
 	margin-top:12px;
-	background-color: #255CBE;
+	background-color: #0873C5;
 	color:white;
-	font-size: 15px;
-	padding: 4px 10px;
+	font-size: 14px;
+	padding: 5px 11px;
+	margin-bottom:20px;
+	/**float:left;*/
 }
 
-#menuGauche {
+.INPUT_submit:hover {
 	
-	width:222px;
-	
-	
+background-image: linear-gradient(#0873C5,#0663A8);
+  cursor:  pointer;
+  
 }
+
+
+/********* Fin Formulaire ***************/
+
+#menuGauche {
+	width:222px;
+}
+
 .menu {
 	
 	width:220px;
@@ -43,6 +130,7 @@ box-shadow: 1px 1px 1px #666;
 	opacity:0.85;
 	overflow: hidden;
 }
+
 .menu:hover {
 	opacity:1;
 }
@@ -53,7 +141,7 @@ box-shadow: 1px 1px 1px #666;
 	top:0;
 	height:27px;
 	width:100%;
-	background-color: #EBEBEB;
+	background-color: rgba(0, 139, 165, 0.16);
 	border-bottom:1px solid #E4E4E4;
 	color:#494949;
 	font-size:18px;
@@ -123,11 +211,18 @@ box-shadow: 1px 1px 1px #666;
 .login-box {
     border: 2px solid #eee;
     margin: 0 auto;
-    padding: 30px 15px;
+    padding: 25px 15px;
     text-align: center;
     width: 30%;
     min-width: 450px;
     max-width: 550px;
+    
+    background-color: #F5F5F5;
+}
+.login-box:hover {
+
+  background-color:#F3F3F3;
+border: 2px solid #E0E0E0;
 }
 
 .login-box tr:first-child { width: 30%; }
@@ -135,20 +230,78 @@ box-shadow: 1px 1px 1px #666;
 
 .login-box h2 {
     font-size: x-large;
+    color:#1F8BDC;
+    margin-bottom:20px;
 }
-
+.login-box label {
+	font-weight: normal;
+}
 .login-box label,
 .login-box input { margin: 15px auto; }
-
+.login-box input:FOCUS {  background-color: white;}
 .login-box tr,
 .login-box td {
-    background-color: transparent;
+	background-color: transparent;
     border: 0;
     border-spacing: 0px;
     border-collapse: collapse;
 }
 
-.errors {
-    color: red;
-    list-style-position: inside;
+/*********************** PAGE D'ACCUEIL *****************************************/
+
+
+#accueil_boxConteneur{
+	float:left;
+	opacity:0.9;	
+	margin:30px 30px 30px 0;
+	width:150px;
+	height:150px;
+	text-align:center;
+	vertical-align: middle;
+	border-width:2px;
+	border-style:solid;
+	line-height: 150px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	color:#3C3C3C;
+	font-weight:bold;
 }
+#accueil_boxConteneur:hover {
+	cursor:pointer;
+	
+	color:#444444;
+	opacity:1;
+}
+#accueil_boxConteneur span { 
+  width:100px; 
+	vertical-align:middle;
+  display:inline-block;
+  line-height:1.2; 
+  text-align:center; 
+}
+.accueil_boxColor_jaune {
+	border-color:#FEE796;
+	background-color:#FFFFBB;
+}
+
+.accueil_boxColor_vert {
+	border-color:#BBFE96;
+	background-color:#D3FFBB;
+}
+
+.accueil_boxColor_bleu {
+	border-color:rgba(150, 208, 254, 0.5);
+	background-color:rgba(187, 211, 255, 0.65);
+}
+
+.accueil_boxColor_rouge {
+	border-color:rgba(254, 167, 150, 0.4);
+	background-color:rgba(255, 190, 187, 0.81);
+}
+
+.accueil_boxColor_gris {
+	border-color:#D8D8D8;
+	background-color:#E7E7E7;
+}
+
