--- a/css/structure.css
+++ b/css/structure.css
@@ -120,7 +120,7 @@ float:left;
 			font-size:19px;
 			float: right;
 			padding-top:7px;
-			margin-right:2%;
+			margin-right:100px;
 		
 		}
 		#corps_titreEtSousMenu_sousMenu li {
@@ -156,6 +156,7 @@ margin-right:5%;
 		#corps_contenu_titreEtSousTitre {
 			float:left;
 			margin-bottom:40px;
+			width:95%;
 		}
 		
 			#corps_contenu_titreEtSousTitre h2{
@@ -182,24 +183,23 @@ margin-right:5%;
 /* --------------------- FOOTER --------------------- */
 
 #footer {
-    position:absolute;
-    bottom:0;
-	height:46px;
-	width:100%;
+    padding:12px 30px 0px 30px;;
+	margin:150px auto;
+	height:32px;
+	width:50%;
+	border:1px solid black;
 	clear:both;
-	border: 0 1px solid #E9E9E9;
+	border:solid 1px #E9E9E9;
 	background-color:#EFEFEF;
-    /*
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
-    */
 	color:#8A8A8A;
 	opacity:0.9;
+	margin-bottom:10px;
 }
-#footer-container {
-    padding:12px 30px;
-}
+
+
 #footer:hover {
 	background-color:#EEEEEE;
 	opacity:1;
