--- a/css/structure.css
+++ b/css/structure.css
@@ -72,33 +72,28 @@ a:hover {
 /* --------------------- MIDDLE --------------------- */
 
 #middle {
-	margin-left:5%;
-	width:90%;
-	margin-bottom:30px;
-	
+	margin: 0 auto;
+    width: 90%;
+    min-width: 1024px;
 }
 
 #menuGauche {
-clear:both;
-float: left;
-
+    clear:both;
+    float: left;
+    width: 222px;
 }
 
 #corps {
-
-margin:0 0 75px 6%;
-width:73%;
-min-width:689px;
-max-width:1100px;
-min-height:600px;
-float:left;
-
+    min-width:689px;
+    min-height:600px;
+    margin-left: 250px;
 }
 
 #corps_titreEtSousMenu {
 	border-bottom:2px solid #D7D7D7; 
 	padding-bottom:5px;
-	width:100%;
+    float: left;
+    width: 100%;
 	margin-bottom:25px;
 }
 
@@ -145,12 +140,9 @@ float:left;
 						
 		}
 #corps_contenu{
-
-margin-left:5%;
-margin-right:5%;
-
-
-
+margin: 0 5%;
+    float: left;
+    width: 100%;
 }
 
 		#corps_contenu_titreEtSousTitre {
