--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* --------------------- ENTETE --------------------- */
+
 div.header {
     background-color:#F0F0F0;
     width:100%;
@@ -36,6 +38,8 @@ div.header .span10 li {
     display:inline-block;
     list-style-type: none;
 }
+
+/* --------------------- CONTENU PRINCIPAL --------------------- */
 
 div.content .menu {
     border:1px solid #E4E4E4;
@@ -99,6 +103,8 @@ div.content select[disabled="disabled"] {
     visibility: hidden;
 }
 
+/* --------------------- FORMULAIRE DE CONNEXION --------------------- */
+
 .form-signin {
     max-width: 300px;
     padding: 19px 29px 29px;
@@ -124,4 +130,43 @@ div.content select[disabled="disabled"] {
     height: auto;
     margin-bottom: 15px;
     padding: 7px 9px;
+}
+
+/* --------------------- FOOTER --------------------- */
+
+.footer {
+    padding:12px 30px 0px 30px;
+	height:32px;
+	width:50%;
+	border:1px solid black;
+	clear:both;
+	border:solid 1px #E9E9E9;
+	background-color:#EFEFEF;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	border-radius: 5px;
+	opacity:0.9;
+    position: fixed;
+    bottom: 0;
+    left:50%;
+    margin-left: -25%;
+    margin-top: 32px;
+    z-index: -2;
+}
+.footer .container-fluid {
+	color:#8A8A8A;
+}
+.footer:hover {
+	background-color:#EEEEEE;
+	opacity:1;
+	color:#696969;
+	
+}
+.footer_copyright {
+	float: left;
+	display:inline-block;
+}
+.footer_groupe {
+    float: right;
+    display: inline-block;
 }
