--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,11 @@ div.content select[disabled="disabled"] {
     opacity:1;
 }
 
+.box-container a {
+width: 100%;
+height: 100%;
+}
+
 .box-container span { 
     width:100px; 
 	color:#494949;
